# OpenBrokerRust

./: Cargo.toml  README.md  yarte.toml
example_clients/: cancelOrder.py  cancelOrder.sh  create_exchange.py  create_offer.py  getOrder.py  getOrders.py  getOrders.sh  load_exchange_instruments.py  login.py  orderUpdates.py  previewOrder.py  previewOrder.sh  submitOppositeOrder.sh  submitOrder.py  submitOrder.sh  submitOrders.py
resources/: prime.sql  schema.sql
resources/static/: index.js
resources/static/app/: admin.html  app.html  mgmt.html  welcome.html
resources/static/app/css/: admin.css  main.css
resources/static/app/js/: app.js  datatables.css  login.js  (+7 more)
resources/templates/includes/: head.hbs
resources/templates/layouts/: layout.hbs
resources/templates/pages/: account.hbs  logout.hbs  register.hbs  welcome.hbs
src/: access_control.rs  admin_api.rs  auth.rs  config.rs  constants.rs  entities.rs  errors.rs  exchange_interface.rs  instrument_manager.rs  main.rs  market_data.rs  persistence.rs  rest_api.rs  time.rs  trade_handling.rs  vetting.rs  websockets.rs
src/admin_api/: instrument_admin.rs  mod.rs  offer_admin.rs
src/auth/: account_pages.rs  auth_api.rs  auth_ui.rs  logout.rs  mod.rs  session.rs  templates.rs
src/converters/: account_converters.rs  exchange_converters.rs  foo.rs  instrument_converters.rs  market_data_converters.rs  mod.rs  order_converters.rs
src/dtos/: account.rs  exchange.rs  mod.rs  order.rs
src/entities/: account.rs  actor.rs  customer.rs  exchange.rs  mod.rs  offer.rs  order.rs  trading.rs
src/exchange_interface/: exchange_client.rs  exchange_error.rs  instrument.rs  market_data.rs  mod.rs  order.rs  trading.rs  websocket_client.rs
src/market_data/: receiver.rs
src/persistence/: access.rs  account.rs  account_management.rs  actor.rs  admin.rs  balance.rs  customer.rs  dao.rs  exchange.rs  instrument.rs  offer.rs  orders.rs  position.rs
src/rest_api/: account.rs  account_api.rs  account_converters.rs  actor.rs  balance_position_api.rs  base_api.rs  converters.rs  customer.rs  exchange.rs  instrument_api.rs  instrument_converters.rs  market_data.rs  market_data_converters.rs  mod.rs  offer.rs  order_api.rs  trading.rs  trading_api.rs  trading_converters.rs
src/trade_handling/: execution_handling.rs  mod.rs  order_state_handling.rs  trade_handling.rs  updates.rs
src/validator/: mod.rs  validator.rs
src/vetting/: all_pass_vetter.rs  mod.rs  vetter.rs
src/websockets/: client.rs  listener.rs  mod.rs  senders.rs  server.rs  stomp.rs  ws_handler.rs
