[package]
name = "OpenBrokerRust"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
actix-rt = "2.11.0"
actix-web = "4.11.0"
reqwest = { version = "0.12.23", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
log = "0.4.28"
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-postgres = "0.7.15"
confik = "0.15.0"
dotenv = "0.15.0"
postgres-types = { version ="0.2.11", features = ["derive"]  }
