[package]
name = "OpenBrokerRust"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
actix-rt = "2.11.0"
actix-web = "4.11.0"
reqwest = { version = "0.12.23", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
log = "0.4.28"
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-postgres = "0.7.15"
confik = "0.15.0"
dotenv = "0.15.0"
postgres-types = { version ="0.2.11", features = ["derive"]  }
clap = { version = "4.5.49", features = ["derive"] }
tokio = { version = "1.12", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.23.1"
anyhow = "1.0"
futures-util = "0.3"
romp = "0.5.2"
async-stomp = "0.6"
serde_json = "1.0"
