[package]
name = "OpenBrokerRust"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
actix-cors = "0.7.1"
actix-rt = "2.11.0"
actix-web = "4.11.0"
reqwest = { version = "0.12.24", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
log = "0.4.28"
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-postgres = "0.7.15"
confik = "0.15.0"
dotenv = "0.15.0"
postgres-types = { version ="0.2.11", features = ["derive"]  }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.28.0"
anyhow = "1.0"
futures-util = "0.3"
serde_json = "1.0"
actix-files = "0.6.2"
actix-ws = "0.3.0"
strfmt = "0.2.5"
bimap = "0.6.3"
strum_macros = "0.27.2"
strum = "0.27.2"
actix-session = {  version = "0.11.0", features = ["redis-session"] }
yarte = { version = "0.15.7" }
argonautica = "0.2.0"
rand = "0.9.2"
time = "0.3.44"
async-std = "1.13.2"

[build-dependencies]
yarte = { version = "0.15.7" }
